feat(agentic): add progressive tool disclosure and page-view dedup
The CLI agent tool loop now sends a curated initial tool set (~16-18 specs) plus the
system.listTools / system.exposeTools meta tools instead of the full 80+ tool registry
on every request, eliminating tens of thousands of tokens of schema overhead per round.
Task-adaptive profiles (browsing vs coding) choose the initial exposure, and the long
tail stays reachable on demand.

Repeated page views fold into self-sufficient references or compact diffs at append time
(PageViewDeduper), and compaction is now transactional: shrink/structure/stability
validation, a traceability ledger (CompactionLedger), protected knowledge documents
(system_skillDoc) exempt from pruning, and context-overflow recovery with bounded
retries.

Tracing gained cli-usage.jsonl, page-timeline.jsonl and cli-compactions.jsonl under the
durable AgentPaths trace dir (dev symlink under ./logs), prompt dumps record the exact
specs sent, and the system prompt embeds a distilled quickstart (references/quickstart.md)
so CLI knowledge survives compression. SKILL.md was slimmed with config.md extracted,
development docs moved into AGENTS.md, and the observe-act engine is now marked deprecated.

Task: update-mvn-readme

Co-Authored-By: Builtin Coworker